# plan_repl_agent

./: .env.sample  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  runner.py
.github/workflows/: lint.yml  tests.yml
agent/: agent_worker.py  executor.py  log.py  prompt_agent.py  prompt_plan.py  run_agent.py  run_step.py  server.py  utils.py  vkusvill_mcp.py
tests/: __init__.py  conftest.py  test_executor.py  test_log.py  test_plan.py  test_prompts.py  test_utils.py
work/: report.md
