[project]
name = "plan-repl-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "more-itertools>=10.8.0",
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "pytesseract>=0.3.13",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tavily-python>=0.7.17",
    "typeguard>=4.4.4",
    "uvicorn>=0.40.0",
]
